<resources>
    <string name="app_name">TodoApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="todoapp_login">TodoApp Login</string>
    <string name="title_activity_todo_list">TodoList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="save">save</string>
    <string name="name">Name</string>
    <string name="test_title">Ez itten a címe a dolognak</string>
    <string name="delete_button">Delete button</string>
    <string name="edit_button">edit button</string>
    <string name="done_button">done button</string>
    <string name="registration">Registration</string>
</resources>
