<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="10"
    android:id="@+id/parent_layout"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_title"
            android:id="@+id/todoTitle"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2019.11.28 18:09"
            android:id="@+id/todoDate"
            android:textColor="@color/secondary_text" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <ImageButton
            android:id="@+id/done"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="2dp"
            android:src="@drawable/done"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:layout_centerVertical="true"
            android:contentDescription="@string/done_button" />
        <ImageButton
            android:id="@+id/delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="2dp"
            android:src="@drawable/delete"
            android:layout_centerVertical="true"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/delete_button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" />
        <ImageButton
            android:id="@+id/edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="2dp"
            android:scaleType="fitCenter"
            android:src="@drawable/edit"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@android:color/transparent"
            android:contentDescription="@string/edit_button" />
    </RelativeLayout>

</LinearLayout>